# libqi-capi

./: CMakeLists.txt  qiproject.xml
qic/: future.h
src/: future.cpp  value.cpp
test/: CMakeLists.txt  test_c_future.cpp  test_c_values.cpp
